fixed image not visible

--- a/webapp/webapp/static/core/css/web.css
+++ b/webapp/webapp/static/core/css/web.css
@@ -138,3 +138,7 @@ textarea {
     color: black;
     font-size: 15px;
   }
+
+  /* #id_data{
+    display:none;
+  } */
